hphp/hack/test/typecheck/reified_generics/is_as_generic_simple.php.exp
WARN: File "is_as_generic_simple.php", line 5, characters 3-15:
This `as` assertion will always fail and lead to an exception at runtime. The expression on the left has type `int` which shares no values with `(int, T)`. (Warn[12012])
WARN: File "is_as_generic_simple.php", line 10, characters 3-15:
This `as` assertion will always fail and lead to an exception at runtime. The expression on the left has type `int` which shares no values with `(int, T)`. (Warn[12012])
WARN: File "is_as_generic_simple.php", line 15, characters 3-15:
This `as` assertion will always fail and lead to an exception at runtime. The expression on the left has type `int` which shares no values with `(int, T)`. (Warn[12012])
ERROR: File "is_as_generic_simple.php", line 4, characters 8-8:
Invalid `as` expression hint (Typing[4195])
  File "is_as_generic_simple.php", line 4, characters 8-8:
  The `as` operator cannot be used with an erased generic type parameter
ERROR: File "is_as_generic_simple.php", line 5, characters 8-15:
Invalid `as` expression hint (Typing[4195])
  File "is_as_generic_simple.php", line 5, characters 14-14:
  The `as` operator cannot be used with an erased generic type parameter
ERROR: File "is_as_generic_simple.php", line 9, characters 8-8:
Invalid `as` expression hint (Typing[4195])
  File "is_as_generic_simple.php", line 9, characters 8-8:
  The `as` operator cannot be used with a reified type parameter that is not marked `<<__Enforceable>>`
ERROR: File "is_as_generic_simple.php", line 10, characters 8-15:
Invalid `as` expression hint (Typing[4195])
  File "is_as_generic_simple.php", line 10, characters 14-14:
  The `as` operator cannot be used with a reified type parameter that is not marked `<<__Enforceable>>`
